<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectCourseActivity" >

    <Button
        android:id="@+id/machineButton"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_below="@+id/javaButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:text="@string/machine"
        android:textSize="50sp" 
        android:textColor = "#FFFFFF"/>

    <Button
        android:id="@+id/mobileButton"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/machineButton"
        android:layout_below="@+id/machineButton"
        android:layout_marginTop="121dp"
        android:gravity="fill_horizontal|center|fill"
        android:text="@string/mobile"
        android:textSize="50sp"
        android:textColor = "#FFFFFF" />

    <TextView
        android:id="@+id/content_comment"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/selectcourselabel"
        android:textSize="50sp" />

    <Button
        android:id="@+id/javaButton"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/machineButton"
        android:layout_below="@+id/content_comment"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:text="@string/java"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

</RelativeLayout>