<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DocumentsActivity" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/document_content"
        android:textSize="70sp" />

    <EditText
        android:id="@+id/comment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv"
        android:layout_below="@+id/tv"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="84dp"
        android:contentDescription="Comment"
        android:ems="10"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/view_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/comment_content"
        android:layout_below="@+id/verify_comment"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="71dp"
        android:text="@string/null_content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/verify_comment"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/comment_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/verify_button"
        android:textSize="30sp" />

</RelativeLayout>
